<resources>
    <string name="app_name">Grade-ulator</string>
    <string name="course_title_hint">Enter a course name E.G. BUS101.</string>
    <string name="course_title_label">Course Name</string>
    <string name="grade_assessment_label">Assessment Items</string>
    <string name="semester_title_label">Study Period</string>
    <string name="semester_title_hint">Enter a name for the study period E.G. Semester 1.</string>
    <string name="course_label">Subjects</string>
    <string name="task_title_label">Result</string>
    <string name="task_title_hint">Enter a name for this assessment task E.G Essay 1.</string>
    <string name="task_mark_hint">Your mark</string>
    <string name="task_out_of_hint">Out of</string>
    <string name="task_percent_hint">%</string>
    <string name="task_weight_hint">Worth %?</string>
    <string name="task_total_hint">Total Achieved</string>
    <string name="new_course">New Course</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s courses</string>

</resources>
